Add some new elements
Add buttons for menu and wine-list and some tasks

--- a/TheChefRestaurant/src/main/resources/templates/index.html
+++ b/TheChefRestaurant/src/main/resources/templates/index.html
@@ -15,7 +15,9 @@
             <h1>THE CHEF RESTAURANT</h1>
             <p>"След една хубава вечеря, човек може да прости на всеки, дори на собствените си роднини."
                 Оскар Уайлд</p>
-            <a href="/reservation" class="btn">To tables</a>
+            <a href="https://thechef-club.com/%d0%bc%d0%b5%d0%bd%d1%8e/" class="btn">Look our Menu</a>
+            <br></br>
+            <a href="https://thechef-club.com/%d0%b2%d0%b8%d0%bd%d0%b5%d0%bd-%d0%bb%d0%b8%d1%81%d1%82/" class="btn">Look our Wine List</a>
         </div>
     </section>
 
