Add reservation field
Add more tasks to my project

--- a/main/resources/templates/about.html
+++ b/main/resources/templates/about.html
@@ -6,7 +6,7 @@
 <body>
 <div class="wrapper">
     <!-- Navigation -->
-    <div th:replace="~{fragments/navigation}"></div>
+    <header th:replace="~{fragments/navigation}"></header>
 
     <div class="info">
         <div></div>
