--- a/main/resources/templates/fragments/navigation.html
+++ b/main/resources/templates/fragments/navigation.html
@@ -35,7 +35,7 @@
                 <a th:href="@{/users/logout}">Logout</a>
                 <!--            </li>-->
                 <li>
-                    <!--                <th:block th:text = "${@loggedUser.username} == null ? 'no user' : ${@loggedUser.username}"></th:block>-->
+                                    <th:block th:text = "${@loggedUser.username} == null ? 'no user' : 'Welcome, ' + ${@loggedUser.username}"></th:block>
                 </li>
             </th:block>
 
