--- a/main/resources/templates/reservation.html
+++ b/main/resources/templates/reservation.html
@@ -16,7 +16,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae alias reiciendis deleniti possimus nemo
                 non repellendus?
                 Quae atque vero modi quidem! Autem cupiditate fugit doloribus ad amet, asperiores provident commodi.</p>
-            <a href="/" class="btn">Learn More</a>
+<!--            <a href="/" class="btn">Learn More</a>-->
         </div>
     </section>
 </div>
