made some changes in reservation
Add more tasks

--- a/TheChefRestaurant/src/main/resources/templates/reservation.html
+++ b/TheChefRestaurant/src/main/resources/templates/reservation.html
@@ -1,3 +1,38 @@
+<!--<html lang="en"-->
+<!--      xmlns:th="http://www.thymeleaf.org">-->
+
+<!--<head th:replace="~{fragments/head}">-->
+<!--</head>-->
+<!--<body>-->
+<!--<div class="wrapper">-->
+<!--    &lt;!&ndash; Navigation &ndash;&gt;-->
+<!--    <header th:replace="~{fragments/navigation}">-->
+<!--</header>-->
+
+<!--    <div class="reservation-info" >-->
+
+<!--        <img src="/images/logo.jpg" alt="Title image">-->
+<!--        <div></div>-->
+<!--        <div>-->
+<!--            <h2>Your Reservation</h2>-->
+<!--            <p>-->
+<!--                <th:block th:text = "${@loggedUser.username} + ', thank you for your reservation in our restaurant! Your order details is: Table in the name of '-->
+<!--&lt;!&ndash;                 + ${@yourReservation.getName()} + ' for '&ndash;&gt;-->
+<!--&lt;!&ndash;                + ${@yourReservation.getCountPeople()} + 'people for' &ndash;&gt;-->
+<!--&lt;!&ndash;                + ${@yourReservation.getDateTime()} + 'oclock. You want to be in the ' &ndash;&gt;-->
+<!--&lt;!&ndash;                + ${@yourReservation.getSection() + 'and you want ' + ${@yourReservation.getSpecialRequest()}}"&ndash;&gt;-->
+<!--                </th:block>-->
+<!--            </p>-->
+<!--        </div>-->
+<!--        <div></div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--&lt;!&ndash; Wrapper Ends &ndash;&gt;-->
+<!--</body>-->
+<!--<footer th:replace="~{fragments/footer}">-->
+<!--</footer>-->
+<!--</html>-->
+
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 
@@ -7,21 +42,33 @@
 <div class="wrapper">
     <!-- Navigation -->
     <header th:replace="~{fragments/navigation}">
-</header>
+    </header>
 
-    <div class="reservation-info" >
-
+    <section th:object="${reservation}" th:action="@{/reservations/your}" class="reservation-info">
         <img src="/images/logo.jpg" alt="Title image">
-        <div></div>
         <div>
             <h2>Your Reservation</h2>
-<!--            <p>-->
-<!--                <th:block th:text = "${@loggedUser.username} + ', thank you for your reservation in our restaurant! Your order details is: Table in the name of ' + ${@addReservationBindingModel.getName()} + ' for '-->
-<!--                + ${@addReservationBindingModel.getCountPeople()} + 'people for' + ${@addReservationBindingModel.getDateTime()} + 'ocklock. You want to be in the ' + ${@addReservationBindingModel.getSection() + 'and you want ' + ${@addReservationBindingModel.getSpecialRequest()}}"></th:block>-->
-<!--            </p>-->
+<!--            <p>Thank you for your reservation</p>-->
+
+                <th:block th:text = "${@loggedUser.username} == null ? 'no user' : 'Thank you, '
+                + *{name} + ' for your reservation! You have confirm for table for '
+                + *{countPeople} + ' for ' + *{dateTime}
+                + '. Your special request is: '
+                + *{specialRequest}"></th:block>
+
         </div>
-        <div></div>
-    </div>
+<!--        <div class="text-center mt-3">-->
+<!--            <h5 class="mt-4 mb-0">Name of the reservation:</h5>-->
+<!--            <span th:text="${@yourReservation.name}">UI/UX Designer</span>-->
+<!--            <h5 class="mt-2 mb-0">Count of people:</h5>-->
+<!--            <span th:text="${addReservationBindingModel.getCountPeople()}">UI/UX Designer</span>-->
+<!--            <h5 class="mt-2 mb-0">Date and time</h5>-->
+<!--            <span th:text="${addReservationBindingModel.dateTime}">UI/UX Designer</span>-->
+<!--            <h5 class="mt-2 mb-0">Your special request is:</h5>-->
+<!--            <span th:text="${addReservationBindingModel.specialRequest}">UI/UX Designer</span>-->
+<!--        </div>-->
+
+    </section>
 </div>
 <!-- Wrapper Ends -->
 </body>
