--- a/TheChefRestaurant/src/main/resources/static/css/styles.css
+++ b/TheChefRestaurant/src/main/resources/static/css/styles.css
@@ -226,17 +226,23 @@ footer {
 .section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+
 }
 
 .reservation-info, .reservation-description, .comments {
     background-color: var(--lightGray);
     padding: 20px;
     border-radius: 10px;
+    margin-left: 40%;
+    margin-top: 10%;
+
 }
 
 .reservation-info {
+    position: fixed;
     grid-column: 1;
     grid-row: 1/3;
+    color: #000;!important;
 }
 
 .reservation-specialRequest {
