add new implements logic
add new tasks

--- a/TheChefRestaurant/src/main/resources/templates/about.html
+++ b/TheChefRestaurant/src/main/resources/templates/about.html
@@ -10,7 +10,7 @@
 
     <div class="info">
         <div></div>
-        <div>
+        <div class="anim">
             <h4>За нас</h4>
             The Chef Restaurant e създаден от шеф Каназирев, който е и главен готвач на заведението.
             Концепцията на The Chef Restaurant e създаване на неустоим кулинарен вкус и безупречен стил
