--- a/TheChefRestaurant/src/main/resources/templates/celebrate.html
+++ b/TheChefRestaurant/src/main/resources/templates/celebrate.html
@@ -9,13 +9,35 @@
 <header th:replace="~{fragments/navigation}">
 </header>
 
-     <section class="road">
+     <section class="category">
         <div>
-            <h2>Title</h2>
-            <p>Very long description</p>
-            <a href="/" class="btn">Learn More</a>
-        </div>
-        <img class="rounded-circle w-75 ml-5" src="/images/celebrating.jpg" alt="Title image">
+            <h2>PRIVATE PARTY</h2><br>
+            <p> We offer our venue for private hire which is
+                perfect for any occasion!<br>
+
+                Clients can customise the food and drink selection
+                as well as the choice of the pop up entertainment
+                for a personalised and truly memorable
+                experience.<br>
+                “Life is about moments: Don’t wait for them… create them”
+                Serendipity has been conceived and developed as a restaurant-destination and a unique dining experience for those who visit it.
+                Our frequent local and international community is already aware that we have great food, great location, ambience, and great service,
+                but unknown friends need to learn this on their first experience.
+                We go out of our way to welcome all guests and make them feel unique.<br>
+                You can organize to our restaurant:<br>
+                -Birthday parties<br>
+                -Engagement parties<br>
+                -Wedding Anniversaries<br>
+                -Child's baptism<br>
+                ...and others<br>
+            </p><br>
+            <a href="/reservations/add" class="btn">Book now</a>
+        </div><br>
+         <section class="gallery">
+             <img src="/images/celebrating.jpg" height="300px" alt="">
+             <img src="/images/abiturient.jpg" height="300px" alt="">
+             <img src="/images/krashtene.jpg" height="300px" alt="">
+         </section>
     </section>
 </div>
 <!-- Wrapper Ends -->
