--- a/TheChefRestaurant/src/main/resources/templates/cocktail.html
+++ b/TheChefRestaurant/src/main/resources/templates/cocktail.html
@@ -9,13 +9,20 @@
     <header th:replace="~{fragments/navigation}">
 </header>
 
-    <section class="road">
+    <section class="ui-autocomplete-category">
         <div>
-            <h2>Title</h2>
-            <p>Very long description</p>
-            <a href="/" class="btn">Learn More</a>
-        </div>
-        <img class="rounded-circle w-75 ml-5" src="/images/cocktail4.jpg" alt="Title image">
+            <h2>Are your company need a cocktail party?</h2><br>
+            <p>Cocktail parties are a great way to socialize with friends and loved ones for drinks and small bites, usually for a shorter period, about two to three hours, without requiring you to serve a full dinner. You can have the party at your home, outdoors as a lawn party, or at a bar, restaurant, or party space.
+
+                If you're looking to host your best cocktail party yet, here are some tried and true tips that will make things easier for you.</p><br>
+            <a href="/reservations/add" class="btn">Book now</a>
+        </div><br>
+        <section class="gallery">
+            <img src="/images/cocktail4.jpg" height="300px" alt="">
+            <img src="/images/cocktail2.jpg" height="300px" alt="">
+            <img src="/images/cocktailParty.webp" height="300px" alt="">
+        </section>
+
     </section>
 </div>
 <!-- Wrapper Ends -->
