--- a/TheChefRestaurant/src/main/resources/templates/fragments/footer.html
+++ b/TheChefRestaurant/src/main/resources/templates/fragments/footer.html
@@ -5,6 +5,14 @@
   <div class="container-fluid text-center">
     <div class="h5 text-white">
       &copy; Elena Kanazireva- SoftUni Student 2023. All rights reserved.
+      <ul class="social-list">
+        <li><a href="https://github.com/ElenaRadkova" class="fab fa-gitHub"></a></li>
+        <li><a href="https://www.linkedin.com/in/elena-kanazireva-63b2ab28b/" class="fab fa-linkedIn"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100087106580860" class="fab fa-facebook-square"></a></li>
+        <li><a href="https://thechef-club.com/?fbclid=IwAR3sUvgKl8I0Uf7qRsL8U3lv1ch-_UdBaBH1vCMA_3qDWVqK0xazjgalxXs" class="fab fa-google"></a></li>
+        <li><a th:href="@{/about}" href="/about">About Us</a></li>
+        <li><a th:href="@{/contact-us}" href="/contact-us">Contact us</a></li>
+      </ul>
     </div>
   </div>
 </footer>
