--- a/TheChefRestaurant/src/main/resources/templates/individual.html
+++ b/TheChefRestaurant/src/main/resources/templates/individual.html
@@ -11,11 +11,22 @@
 
     <section class="ui-autocomplete-category">
         <div>
-            <h2>Title</h2>
-            <p>Very long description</p>
-            <a href="/" class="btn">Learn More</a>
-        </div>
-        <img class="rounded-circle w-75 ml-5" src="/images/menu1.jpg" alt="Title image">
+            <h2>DINNER WITH FRIENDS OR JUST DRINK</h2><br>
+            <p>All our restaurants take great pride in sourcing the finest quality local ingredients.<br>
+                Seasonal vegetables are sustainably sourced, while our trusted local artisanal suppliers deliver
+                delicious dairy, meats and fish.<br>
+                The Chef is a restaurant that combines irresistible cuisine, impeccable service and a cozy atmosphere.<br>
+                A place where you will spend a wonderful evening with friends or loved ones.
+
+            </p><br>
+            <a href="/reservations/add" class="btn">Book now</a>
+        </div><br>
+        <section class="gallery">
+            <img src="/images/menu1.jpg" height="250px" alt="">
+            <img src="/images/dinner3.jpg" height="250px" alt="">
+            <img src="/images/chicken.jpg"  height="250px" alt="">
+        </section>
+
     </section>
 </div>
 <!-- Wrapper Ends -->
