--- a/TheChefRestaurant/src/main/resources/templates/profile.html
+++ b/TheChefRestaurant/src/main/resources/templates/profile.html
@@ -10,20 +10,16 @@
     <div class="container mt-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-7">
-                <div class="profile-card p-3 py-4">
+                <div class="profile-card p-3 py-4" th:object="${user}">
                     <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
-                    <div class="text-center mt-3" th:object="${user}">
+                    <div class="text-center mt-3">
                         <h5 class="mt-4 mb-0">Full name</h5>
-                        <span th:text="*{fullName}">UI/UX Designer</span>
+                        <span th:text="${user.getFullName()}">UI/UX Designer</span>
                         <h5 class="mt-2 mb-0">Username</h5>
-                        <span th:text="*{username}">UI/UX Designer</span>
+                        <span th:text="${user.getUsername()}">UI/UX Designer</span><br>
+<!--                        <a th:href="@{/reservations/your/{id}(id = *{id})}" class="btn-anim">Your Reservation</a>-->
 <!--                        <h5 class="mt-2 mb-0">PhoneNumber</h5>-->
 <!--                        <span th:text="*{phoneNumber}">+359000222</span>-->
-                        <div class="px-4 mt-5">
-                            <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum
-                                optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque
-                                nesciunt quis rerum sunt suscipit. </p>
-                        </div>
 <!--                        <ul class="social-list">-->
 <!--                            <li><i class="fab fa-facebook-square"></i></li>-->
 <!--                            <li><i class="fab fa-instagram"></i></li>-->
@@ -32,6 +28,7 @@
 <!--                        </ul>-->
                         <div class="buttons">
                             <button class="btn btn-outline-primary px-4">Back</button>
+
 <!--                            <button class="btn btn-primary px-4 ms-3">Contact</button>-->
                         </div>
                     </div>
