--- a/TheChefRestaurant/src/main/resources/templates/your-reservation.html
+++ b/TheChefRestaurant/src/main/resources/templates/your-reservation.html
@@ -10,50 +10,75 @@
     <header th:replace="~{fragments/navigation}">
     </header>
 
-    <input type = "hidden" name="reservationId" id="reservationId">
+    <input type = "hidden" name="reservationId" id="reservationId" th:value="${reservation.id}">
+
     <div class = "your-main" th:object="${reservation}">
-        <section th:action="@{/reservations/your/{id}}" class="reservation-info text-center">
-            <h2 th:text="'Thank you for your reservation,' + ${@loggedUser.username}"> </h2>
-            <p>You have reservation of the name: <span id="name"></span></p>
-            <p>For: <span id="countPeople"></span> people</p>
-            <p>Date and time for your reservation is: <span id="dateTime"></span></p>
-            <p>You prefer <span id="section">section</span></p>
-            <p>For <span id="category">category of your reservation</span></p>
+        <!--/*@thymesVar id="reservations" type=""*/-->
+        <section class="reservationEntity-info text-lg-left">
+            <h2 th:text="'Thank you for your reservation!' "> </h2>
+            <p>You have reservation of the name:
+                <span th:text="*{name}" id="name"></span>
+            </p>
+            <p>Prefer person:
+                <span th:text="*{countPeople} + ' people'" id="countPeople"></span>
+            </p>
+            <p id="dateTime">Date of your reservation is:
+                <span th:text="*{dateTime.getDayOfMonth()}" ></span>
+                <span th:text="*{dateTime.getMonth()}"></span>
+                <span th:text="*{dateTime.getYear()}"></span>
+            </p>
+            <p id="dateTime">Prefer time:
+                <span th:text="*{dateTime.getHour()} + ':'"></span>
+                <span th:text="*{dateTime.getMinute()} + 'h  '"></span>
+                <span th:text="*{dateTime.getDayOfWeek()}"></span>
+            </p>
+            <p>Prefer area:
+                <span th:text="*{section}" id="section"></span>
+            </p>
+            <p>Your special requests are:
+                <span th:text="*{specialRequest}" id="specialRequest"></span>
+            </p>
         </section>
 
+        <section class="comments">
+            <h1>Comments</h1>
+            <div>
+                <!-- Comments submission -->
+                <form id="commentForm" method="POST"
+                      th:action="@{/api/{reservationId}/comments(reservationId=${reservation.id})}">
+                    <div class="form-group">
+                        <h4>Leave a comment</h4>
+                        <label for="textContent">TextContent</label>
+                        <textarea name="textContent"
+                                  id="textContent"
+                                  cols="30"
+                                  rows="5"
+                                  class="form-control"
+                                  style="background-color: white;"></textarea>
+                        <small id="messageError" class="invalid-feedback">
+                            Text comment should be at least 10 characters.
+                        </small>
+                    </div>
 
-
+                    <div class="form-group">
+                        <input type="submit"
+                               class="btn"
+                               id="postComment"
+                               value="Post Comment"/>
+                    </div>
+                </form>
+                <!-- Comments submission -->
+            </div>
+            <!-- All comments section -->
+            <div>
+                <span id="commentCtnr"><!-- Comments section, filled in by script --></span>
+            </div>
+            <!-- EO: All comments section -->
+        </section>
     </div>
-
-<!--    <section th:object="${reservation}" th:action="@{/reservations/your/{id}}" class="reservation-info">-->
-<!--        <img src="/images/logo.jpg" alt="Title image">-->
-<!--        <div>-->
-<!--            <h2>Your Reservation</h2>-->
-<!--&lt;!&ndash;            <p>Thank you for your reservation</p>&ndash;&gt;-->
-
-<!--                <th:block th:text = "${@loggedUser.username} == null ? 'no user' : 'Thank you, '-->
-<!--                + *{name} + ' for your reservation! You have confirm for table for '-->
-<!--                + *{countPeople} + ' for ' + *{dateTime}-->
-<!--                + '. Your special request is: '-->
-<!--                + *{specialRequest}"></th:block>-->
-<!--            <div class="buttons">-->
-<!--                <button th:action="@{/index}" class="btn btn-outline-primary px-4">Back</button>-->
-<!--                &lt;!&ndash;                            <button class="btn btn-primary px-4 ms-3">Contact</button>&ndash;&gt;-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--        <div class="text-center mt-3">-->
-<!--            <h5 class="mt-4 mb-0">Name of the reservation:</h5>-->
-<!--            <span th:text="${@yourReservation.name}">UI/UX Designer</span>-->
-<!--            <h5 class="mt-2 mb-0">Count of people:</h5>-->
-<!--            <span th:text="${addReservationBindingModel.getCountPeople()}">UI/UX Designer</span>-->
-<!--            <h5 class="mt-2 mb-0">Date and time</h5>-->
-<!--            <span th:text="${addReservationBindingModel.dateTime}">UI/UX Designer</span>-->
-<!--            <h5 class="mt-2 mb-0">Your special request is:</h5>-->
-<!--            <span th:text="${addReservationBindingModel.specialRequest}">UI/UX Designer</span>-->
-<!--        </div>-->
-
+    <script th:src="@{/js/comments.js}"></script>
 </div>
+
 <!-- Wrapper Ends -->
 </body>
 <footer th:replace="~{fragments/footer}">
