--- a/TheChefRestaurant/src/main/resources/static/css/mobile.css
+++ b/TheChefRestaurant/src/main/resources/static/css/mobile.css
@@ -5,6 +5,14 @@
       'showcase showcase'
       'top-box-a top-box-b';
   }
+  .contact {
+    grid-template-areas:
+      'contact-map'
+      'contact-info';
+  }
+  .contact-info{
+    grid-template-columns: 1fr;
+  }
 
   .showcase h1 {
     font-size: 2.5rem;
@@ -14,15 +22,15 @@
     grid-template-columns: 1fr;
   }
 
-  .road {
-    grid-template-columns: 1fr;
-  }
+  /*.road {*/
+  /*  grid-template-columns: 1fr;*/
+  /*}*/
 
-  .road .btn {
-    display: block;
-    text-align: center;
-    margin: auto;
-  }
+  /*.road .btn {*/
+  /*  display: block;*/
+  /*  text-align: center;*/
+  /*  margin: auto;*/
+  /*}*/
 }
 
 @media (max-width: 500px) {
@@ -31,5 +39,16 @@
       'showcase'
       'top-box-a'
       'top-box-b';
+  }
+  .contact {
+    grid-template-areas:
+      'contact-map'
+      'contact-info';
+  }
+  .contact-info{
+    grid-template-columns: 1fr;
+  }
+  .contact-map{
+    width: 100%;
   }
 }
