--- a/TheChefRestaurant/src/main/resources/static/css/styles.css
+++ b/TheChefRestaurant/src/main/resources/static/css/styles.css
@@ -1,8 +1,8 @@
 /* CSS Variables */
 :root {
-    --primary: #eee7e7;
-    --dark: #333;
-    --light: #fff;
+    --primary: rgba(234, 171, 14, 0);
+    --dark: rgb(225, 219, 220);
+    --light: #f5f0f0;
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     --lightGray: rgba(241, 241, 241, 0.8);
 }
@@ -25,7 +25,7 @@ body {
 
 .btn {
     background: var(--dark);
-    color: var(--light);
+    color: #1b1e21;
     padding: 0.6rem 1.3rem;
     text-decoration: none;
     border: 0;
@@ -33,12 +33,11 @@ body {
 
 .main-btn {
     text-decoration: none;
-    color: #231d1e;
+    color: #e3d8da;
 }
 
 .main-btn:hover {
     text-decoration: none;
-
 }
 
 
@@ -73,8 +72,8 @@ img {
 }
 
 .main-nav a:hover {
-    background: var(--dark);
-    color: var(--light);
+    background: #f5f0f0;
+    color: darkred;
 }
 
 /* Top Container */
@@ -89,28 +88,47 @@ img {
 /* Showcase */
 .showcase {
     grid-area: showcase;
-    min-height: 400px;
+    min-height: 600px;
     background: url("../images/litle-home-cover.jpg");
+    /*background: repeat;*/
     background-size: cover;
     background-position: center;
-    padding: 3rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
     box-shadow: var(--shadow);
+    animation-delay: 0.5s;
 }
 
 .showcase h1 {
     font-size: 4rem;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     color: var(--light);
+    animation-delay: 1s;
 }
 
 .showcase p {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-top: 0;
     color: var(--light);
+    animation-delay: 1.5s;
+}
+.showcase a{
+    animation-delay: 2s;
+}
+.anim{
+    padding-top: 0;
+    opacity: 0;
+    transform: translateY(30px);
+    animation: moveUp 1s linear forwards;
+}
+@keyframes moveUp {
+    100%{
+        opacity: 1;
+        transform: translateY(30px);
+    }
 }
 
 /* Top Box */
@@ -138,7 +156,7 @@ img {
 /* Boxes */
 .boxes {
     display: grid;
-    grid-gap: 100px;
+    grid-gap: 150px;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
@@ -150,21 +168,21 @@ img {
 }
 
 /* Info */
-.road {
-    background: var(--primary);
-    box-shadow: var(--shadow);
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 3rem;
-    grid-row: auto;
-}
+/*.road {*/
+/*    background: var(--primary);*/
+/*    box-shadow: var(--shadow);*/
+/*    display: grid;*/
+/*    grid-gap: 30px;*/
+/*    grid-template-columns: repeat(2, 1fr);*/
+/*    padding: 3rem;*/
+/*    grid-row: auto;*/
+/*}*/
 
 
 /* Portfolio */
 .gallery {
     display: grid;
-    grid-gap: 100px;
+    grid-gap: 150px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
@@ -181,6 +199,26 @@ footer {
     text-align: center;
     padding: 1rem;
 }
+.logout-btn{
+    background: var(--primary);
+    display: block;
+    text-decoration: none;
+    padding: 0.8rem;
+    text-align: center;
+    color: var(--dark);
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    box-shadow: var(--shadow);
+    width: 100%;
+    height: auto;
+}
+.logout-btn:hover{
+    background: #f5f0f0;
+    color: darkred;
+}
+.comments{
+    background-color: transparent !important;
+}
 
 /* About */
 .info {
@@ -190,7 +228,20 @@ footer {
     background-color: #747a80;
     color: white;
     padding: 5rem;
+    margin-top: 4rem;
     border-radius: 5rem;
+}
+.contact-info{
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    list-style: none;
+    text-align: center;
+}
+.contact-map{
+    display: flex;
+    padding: 5rem;
+    text-align: center;
 }
 
 .info div {
@@ -205,7 +256,7 @@ footer {
 }
 
 .info div:nth-child(3) {
-    background-image: url("../images/about2.jpg");
+    background-image: url("../images/chef.jpg");
     background-size: cover;
     border-bottom-left-radius: 5rem;
     border-top-right-radius: 5rem;
@@ -233,21 +284,27 @@ footer {
     background-color: var(--lightGray);
     padding: 20px;
     border-radius: 10px;
-    margin-left: 40%;
+    margin-left: 10px;
     margin-top: 10%;
+
 
 }
 
 .reservation-info {
-    position: fixed;
+    position: relative;
     grid-column: 1;
-    grid-row: 1/3;
+    grid-row: auto;
     color: #000;!important;
+    text-align: left;
 }
 
 .reservation-specialRequest {
     grid-column: 2/4;
     grid-row: 2;
+}
+.reservationEntity-info span{
+    font-weight: bold;
+    font-family: Helvetica;
 }
 
 .comments {
@@ -347,3 +404,10 @@ body {
     height: 40px;
     background-color: #0833e3
 }
+
+
+/*.main-nav{*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    width: 100%;*/
+/*}*/
