--- a/TheChefRestaurant/src/main/resources/templates/fragments/navigation.html
+++ b/TheChefRestaurant/src/main/resources/templates/fragments/navigation.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 <header th:fragment="navigation">
     <nav class="main-nav">
         <ul>
-            <th:block th:if="${@loggedUser.id == null}">
+            <th:block sec:authorize="!isAuthenticated()">
                 <li>
                     <a href="/">Home</a>
                 </li>
-                <!--            <li th:unless="${@loggedUser.isLogged()}">-->
-                <a th:href="@{/users/login}">Login</a>
+                <a href="/users/login">Login</a>
                 </li>
-                <!--            <li th:unless="${@loggedUser.isLogged()}">-->
-                <a th:href="@{/users/register}">Register</a>
+                <a href="/users/register">Register</a>
                 </li>
                 <li>
-                    <a th:href="@{/about}">About</a>
+                    <a href="/about">About</a>
                 </li>
             </th:block>
-            <th:block th:unless="${@loggedUser.id == null}">
+            <th:block sec:authorize="isAuthenticated()">
                 <li>
-                    <a th:href="@{/reservations/add}">Add new reservation</a>
+                    <a href="/reservations/add">Add new reservation</a>
                 </li>
                 <li>
-                    <a th:href="@{/users/profile/{id}(id = ${@loggedUser.id})}">Profile</a>
+                    <a href="/">Profile</a>
                 </li>
                 <li>
                     <a href="/">Admin</a>
                 </li>
-                <!--            <li th:if="${@loggedUser.isLogged()}">-->
-                <!--                    <form th:action="@{users/logout}" method="POST">-->
-                <!--                        <input type="submit" value="LOGOUT"/>-->
-                <!--                    </form>-->
-                <a th:href="@{/users/logout}">Logout</a>
-                <!--            </li>-->
-                <li>
-                                    <th:block th:text = "${@loggedUser.username} == null ? 'no user' : 'Welcome, ' + ${@loggedUser.username}"></th:block>
+<!--                <li>-->
+<!--                    <a href="/users/logout">Logout</a>-->
+<!--                </li>-->
+
+                <li class="main-nav" sec:authorize="isAuthenticated()" >
+<!--                    <div class="logged-user">-->
+<!--                        Welcome, <th:block sec:authentication="name"></th:block>!-->
+<!--                    </div>-->
+                        <form th:method="post"
+                              th:action="@{/users/logout}">
+                            <input type="submit" class="logout-btn" value="Logout"/>
+                       </form>
+                </li>
+                <li class="main-nav" sec:authorize="isAuthenticated()" >
+                        Welcome, <th:block sec:authentication="name"></th:block>!
                 </li>
             </th:block>
-
         </ul>
     </nav>
 </header>
