--- a/TheChefRestaurant/src/main/resources/templates/login.html
+++ b/TheChefRestaurant/src/main/resources/templates/login.html
@@ -8,45 +8,49 @@
     <div class="d-flex justify-content-center">
         <div class="row g-3 align-items-center">
             <form
-                    th:object="${userLoginBindingModel}"
                     th:action="@{/users/login}"
-                    th:method="POST">
+                    th:method="post">
                 <div>
-                    <h5 th:if="${!isExist}" class="bg-danger">Incorrect username or password</h5>
+<!--                    <h5 th:if="${!isExist}" class="bg-danger">Incorrect username or password</h5>-->
                     <div class="col-auto">
-                        <label for="inputUsername" class="col-form-label ">Username</label>
+                        <label for="username" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
                         <input type="text"
-                               th:field="*{username}"
-                               th:errorclass="'is-invalid bg-danger'"
-                               required minlength="4" maxlength="20"
-                               id="inputUsername"
+                               name="username"
+                               th:value="${username}"
+                               required
+                               id="username"
                                class="form-control"
-                               aria-describedby="usernameHelpInline">
+                               placeholder="Username"/>
                     </div>
-                    <small>
-                        <span class="invalid-feedback"> Username is not correct </span>
-                    </small>
+<!--                    <small class="invalid-feedback">-->
+<!--                        <span class="bg-danger"> Username is not correct </span>-->
+<!--                    </small>-->
                 </div>
+
                 <div>
                     <div class="col-auto">
-                        <label for="inputPassword" class="col-form-label ">Password</label>
+                        <label for="password" class="col-form-label ">Password</label>
                     </div>
                     <div class="col-auto">
                         <input type="password"
-                               th:field="*{password}"
-                               required minlength="4" maxlength="20"
-                               id="inputPassword" class="form-control"
-                               aria-describedby="passwordHelpInline">
+                               name="password"
+                               required
+                               id="password" class="form-control"
+                               placeholder="Password"/>
                     </div>
+
+                    <p th:if="${bad_credentials}" class="errors alert alert-danger">
+                        Invalid username or password.
+                    </p>
+
                 </div>
                 <div class="d-flex justify-content-center mt-2">
                     <button class="btn btn-primary btn-block w-50" type="submit">Login</button>
                 </div>
             </form>
         </div>
-
     </div>
 </main>
 <footer th:replace="~{fragments/footer}">
